Fixed wrong font issue

--- a/src/index.sass
+++ b/src/index.sass
@@ -4,25 +4,25 @@
   font-family: "Inter"
   font-style: normal
   font-weight: normal
-  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Inter/Inter-Regular.ttf")
+  src: url("./fonts/Inter/Inter-Regular.ttf")
 
 @font-face
   font-family: "Inter"
   font-style: normal
   font-weight: bold
-  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Inter/Inter-SemiBold.ttf")
+  src: url("./fonts/Inter/Inter-SemiBold.ttf")
 
 @font-face
   font-family: "Roboto"
   font-style: normal
   font-weight: normal
-  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Roboto/Roboto-Regular.ttf")
+  src: url("./fonts/Roboto/Roboto-Regular.ttf")
 
 @font-face
   font-family: "Roboto"
   font-style: normal
   font-weight: bold
-  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Roboto/Roboto-Bold.ttf")
+  src: url("./fonts/Roboto/Roboto-Bold.ttf")
 
 html, body, #root
   min-width: 400px
